--- a/springboot/src/main/resources/static/memberForm.html
+++ b/springboot/src/main/resources/static/memberForm.html
@@ -20,6 +20,10 @@
             <input type="text" name="address">
         </li>
         <li>
+            <label>subject</label>
+            <input type="text" name="subject">
+        </li>
+        <li>
             <button type="submit">Send</button>
             <button type="reset">Cancle</button>
         </li>
