--- a/springboot/src/main/resources/static/memberForm.html
+++ b/springboot/src/main/resources/static/memberForm.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form action="/member" method="get">
+<form action="/member" method="post">
     <ul>
         <li>
             <label>Name</label>
