--- a/springboot/src/main/resources/static/index.html
+++ b/springboot/src/main/resources/static/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
 </head>
 <body>
-<h1> welcome to Spring world!!</h1>
+    <h1>Welcomt to Spring wrorld!!</h1>
 </body>
 </html>
