--- a/springboot/src/main/resources/static/memberForm.html
+++ b/springboot/src/main/resources/static/memberForm.html
@@ -5,31 +5,30 @@
     <title>Title</title>
 </head>
 <body>
-<form action="/member-api" method="post">
-    <ul>
-        <li>
-            <label>Name</label>
-            <input type="text" name="name">
-        </li>
-        <li>
-            <label>Age</label>
-            <input type="text" name="age">
-        </li>
-        <li>
-            <label>Address</label>
-            <input type="text" name="address">
-        </li>
-        <li>
-            <label>subject</label>
-            <input type="text" name="subject">
-        </li>
-        <li>
-            <button type="submit">Send</button>
-            <button type="reset">Cancle</button>
-        </li>
-    </ul>
-</form>
-
-
+    <h1>Member Form</h1>
+    <form action="/member-api" method="post">
+        <ul>
+            <li>
+                <label>Name</label>
+                <input type="text" name="name">
+            </li>
+            <li>
+                <label>Age</label>
+                <input type="text" name="age">
+            </li>
+            <li>
+                <label>Address</label>
+                <input type="text" name="address">
+            </li>
+            <li>
+                <label>Subject</label>
+                <input type="text" name="subject">
+            </li>
+            <li>
+                <button type="submit">Send</button>
+                <button type="reset">Cancle</button>
+            </li>
+        </ul>
+    </form>
 </body>
 </html>
