--- a/springboot/src/main/resources/static/employee.html
+++ b/springboot/src/main/resources/static/employee.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>사원관리 프로그램</title>
-    <hr>
-    <a href="http://localhost:8080/list">사원 리스트</a>&nbsp;|&nbsp;
-    <a href="/employeeRegister.html">사원등록</a>
-    <hr>
+    <title>Title</title>
 </head>
 <body>
-
+    <h1>사원관리 프로그램</h1>
+    <hr>
+    <a href="http://localhost:8080/employeeRegister.html">사원등록</a>&nbsp;&nbsp;
+    <a href="http://localhost:8080/list">사원리스트</a>
 </body>
 </html>
